<resources>
    <string name="app_name" translatable="false">Poliedres</string>
    <string name="benvingut">Welcome to the new POLIEDRES al nou POLIEDRES</string>
    <string name="boto1">Start!</string>
    <string name="password">Password</string>
    <string name="user_pass">User is correct!</string>
    <string name="user_deny">User is not correct!</string>
    <string name="prisma">Prism</string>
    <string name="piramide">Pyramid</string>
    <string name="cilindre">Cylinder</string>
    <string name="con">Cone</string>
    <string name="esfera">Sphere</string>
    <string name="res_seleccionat">You haven\'t selected anything!</string>
    <string name="longitud_de_la_base">Base\'s longitude</string>
    <string name="toast_minim_costats">Minimum 3 sides!</string>
    <string name="error_longitud_costats">Sides\' logitude is missing</string>
    <string name="error_num_costats">Number of sides is missing</string>
    <string name="error_altura">Height is missing</string>
    <string name="error_radi">Radius is missing</string>
    <string name="try_again">Calculate again</string>
    <string name="back_menu">Back to menu</string>
    <string name="results">Results</string>
    <string name="area">Area</string>
    <string name="volum">Volume</string>
</resources>
